--- a/parts/client/login.jade
+++ b/parts/client/login.jade
@@ -46,20 +46,20 @@ template(name='forgot_password')
             .fifteen.wide.column
                 //- h1.ui.center.aligned.header Reset Password
                 h1.ui.center.aligned.grey.header
-                    +i name='forgot-password' cl='ui mini inline image'                    
+                    +i n='forgot-password' cl='ui mini inline image'                    
                     |forgot password 
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.center.aligned.basic.segment
                     .ui.inline.header
-                        //- +i name='user'
+                        //- +i n='user'
                         | username
                     .ui.large.input(class=login_class)
                         input.username(type='text')
                     .ui.submit.button.submit_username submit
                     .ui.header or
                     .ui.inline.header
-                        +icon name='email'
+                        +icon n='email'
                         | email
                     .ui.labeled.large.input
                         input.email(type='email')
@@ -78,7 +78,7 @@ template(name='forgot_password')
                         i.sign.in.alternate.icon
                         |login
                     a.ui.big.button(href='/register')
-                        +icon name='add-user-male' cl='ui mini inline image'
+                        +icon n='add-user-male' cl='ui mini inline image'
                         |register
 
 
@@ -114,7 +114,7 @@ template(name='register')
                     //-     i.large.home.icon
                     .ui.big.inline.header 
                         i.yin.yang.icon
-                        // +i name='add-user-male'
+                        // +i n='add-user-male'
                         i.user.plus.grey.icon
                         // |register
                 //- if message
@@ -138,7 +138,7 @@ template(name='register')
                 //     input.email(type='text')
                 .ui.small.inline.header 
                     i.lock.grey.icon
-                    // +icon name='password'
+                    // +icon n='password'
                     | password
                 .ui.fluid.input(class=login_class)
                     input.password(type='password')
@@ -159,7 +159,7 @@ template(name='register')
                     // // .ui.small.header username "#{username}" found
                     // a.ui.basic.fluid.button(href='/login') 
                     //     // i.right.chevron.icon
-                    //     +icon name='internal' cl='ui inline image'
+                    //     +icon n='internal' cl='ui inline image'
                     //     |login
                 .ui.center.aligned.basic.segment    
                     // .ui.small.header by registering you agree to our 
@@ -168,6 +168,6 @@ template(name='register')
                     a.ui.circular.button(href='/login') 
                         // i.chevron.right.icon
                         small or
-                        +i name='login-rounded-right' cl='ui avatar image'
+                        +i n='login-rounded-right' cl='ui avatar image'
                         |login
                     
