--- a/parts/client/questions.jade
+++ b/parts/client/questions.jade
@@ -34,8 +34,8 @@ template(name='questions')
             +skve k='sort_direction' v=-1 l='up'
             +skve k='sort_direction' v=1 l='down'
             |view
-            +skve k='view_mode' v='cards' l='cards' icon='clone'
-            +skve k='view_mode' v='list' l='list' icon='list'
+            +skve k='view_mode' v='cards' l='cards' i='clone'
+            +skve k='view_mode' v='list' l='list' i='list'
             .spacer
             if skv_is 'view_mode' 'list'
                 .ui.big.link.selection.list 
