--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -249,31 +249,7 @@ html.ios body {
     top: 290px;
   }
 }
-
-
-.header {
-    /* border-radius: 0 0 10px 10px !important; */
-    transition: color .5s ease !important;
-    /* background-color: rgba(250,250,250,.6) !important; */
-    /* opacity: .7 !important; */
-}
-/* .topnav .menu {
-    z-index: 2000 !important;
-} */
-.menu:not(.topnav) {
-     /*border-radius: 10px !important; */
-    /*transition: background-color .5s ease !important;*/
-}
-
-.topnav > .item {
-    /*transition: all .1s ease !important;*/
-    /* z-index: 2000 !important; */
-}
-.global_container{
-    transition: transform .5s !important;
-     /*margin-top: 3.5em !important; */
-    /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
-}
+input
 
 
 
@@ -540,7 +516,7 @@ a.title, #title {
 
 input {
     margin: 5px !important;
-    border-radius: 7px !important; 
+    /*border-radius: 7px !important; */
 }
 
 ::-webkit-scrollbar {
