--- a/parts/debit.jade
+++ b/parts/debit.jade
@@ -24,24 +24,24 @@ template(name='debit_view')
                         | #{when}
                     .ui.segment
                         .ui.inline.header 
-                            +icon name='donate'
+                            +icon n='donate'
                             |sender
-                        a.ui.inline.header(href="/user/#{_author.username}") 
+                        a.ui.inline.header(href="/u/#{_author.username}") 
                             img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                             |#{_author.username}
                     .ui.segment
                         .ui.inline.header
-                            +icon name='receive-cash'
+                            +icon n='receive-cash'
                             |recipient
                         
-                        a(href="/user/#{recipient.username}")
+                        a(href="/u/#{recipient.username}")
                             img.ui.medium.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        a.ui.header(href="/user/#{recipient.username}")
+                        a.ui.header(href="/u/#{recipient.username}")
                             |#{recipient.name}
                             
                 .eight.wide.column
-                    +textarea_view key='description' label='description' direct=true
-                    +image_view key='image_id' label='image' direct=true
+                    +textarea_view k='description' l='description' d=true
+                    +image_view k='image_id' l='image' d=true
                     div 
                     if tags
                         i.tags.icon
@@ -51,7 +51,7 @@ template(name='debit_view')
                     .spacer
                     +comments
                     +voting_full
-                    //- +array_view key='location_tags' label='location_tags' direct=true
+                    //- +array_view k='location_tags' l='location_tags' d=true
 
 
 template(name='debit_edit')
@@ -71,7 +71,7 @@ template(name='debit_edit')
                         .ui.header recipient
                         with recipient
                             i.large.remove.circular.link.icon.remove_recipient
-                            a.pointer(href="/user/#{username}")
+                            a.pointer(href="/u/#{username}")
                                 img.ui.tiny.inline.circular.image(src="{{c.url profile_image_id height=400 width=400 gravity='face' crop='fill'}}")
                                 .ui.inline.header #{username}
                                 .ui.small.grey.inline.header #{points}
@@ -88,8 +88,8 @@ template(name='debit_edit')
                                     |#{username}
                                     
                 .six.wide.column
-                    +textarea_edit key='description' label='description' direct=true
-                    +image_edit key='image_id' label='image' direct=true
+                    +textarea_edit k='description' l='description' d=true
+                    +image_edit k='image_id' l='image' d=true
                     div 
                     div
                     .ui.inline.header
@@ -103,16 +103,16 @@ template(name='debit_edit')
                             i.delete.icon.remove_element
                             |#{this}
                     
-                    //- +array_edit key='location_tags' label='location_tags' direct=true
+                    //- +array_edit k='location_tags' l='location_tags' d=true
                 .five.wide.column
                     .ui.big.header #{amount}pts
                     .ui.big.input
-                        input(type='number' value=amount)
+                        input(type='number' v=amount)
                     div
-                    +key_value_edit key='amount' value=1
-                    +key_value_edit key='amount' value=5
-                    +key_value_edit key='amount' value=10
-                    +key_value_edit key='amount' value=20
+                    +key_value_edit k='amount' v=1
+                    +key_value_edit k='amount' v=5
+                    +key_value_edit k='amount' v=10
+                    +key_value_edit k='amount' v=20
                     .spacer
                     .ui.center.aligned.basic.segment
                         if can_submit
@@ -123,3 +123,28 @@ template(name='debit_edit')
                             .ui.big.green.big.disabled.circular.button
                                 i.checkmark.big.icon
                                 // |submit
+
+
+
+template(name='user_debits')  
+    .ui.header 
+        i.send.icon
+        |sent
+    .ui.link.list.scrolling
+        each sent_items
+            .item
+                if target.profile_image_id
+                    img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                strong #{amount}pt
+                |to
+                a(href="/u/#{target.username}")
+                    |#{target.username}
+                .content
+                    a(href="/gift/#{_id}/view")
+                        |#{when} 
+                    .description
+                        |#{description}
+                        each tags
+                            .ui.mini.basic.label #{this}
+                    if is_admin
+                        +remove_button
