--- a/parts/delta/doc_edit.jade
+++ b/parts/delta/doc_edit.jade
@@ -14,7 +14,7 @@ template(name='model_doc_edit')
                         #delete_doc.ui.icon.circular.button
                             i.trash.icon
                         if is_user
-                            +boolean_edit k='private' direct=true
+                            +boolean_edit k='private' d=true
                     .twelve.wide.column
                         //- |#{model}
                         each edit_fields
