--- a/parts/delta/doc_view.jade
+++ b/parts/delta/doc_view.jade
@@ -19,7 +19,7 @@ template(name='model_doc_view')
                                 |timestamp tags
                             each _timestamp_tags
                                 .ui.inverted.label #{this}
-                        +user_list_toggle k='bookmark_ids' icon='bookmark' label='bookmark'
+                        +user_list_toggle k='bookmark_ids' i='bookmark' l='bookmark'
                         div
                         .ui.small.header #{views} views
                         .ui.small.inline.header by
