--- a/parts/rental.jade
+++ b/parts/rental.jade
@@ -24,9 +24,9 @@ template(name='rental_view')
                 .sixteen.wide.column
                     a.ui.compact.circular.button(href="/m/rental")
                         i.chevron.left.icon
-                        +icolor name='calendar' cl='ui inline image'
+                        +icolor n='calendar' cl='ui inline image'
                     .ui.small.inline.header(title='viewing rental')
-                        +icolor name='tear-off-calendar'
+                        +icolor n='tear-off-calendar'
                         // i.calendar.icon
                         // |view rental
                     .ui.large.inline.header #{title}
@@ -47,7 +47,7 @@ template(name='rental_view')
                         .ui.tertiary.segment
                             .ui.header 
                                 small author
-                            a.ui.header(href="/user/#{_author.username}") 
+                            a.ui.header(href="/u/#{_author.username}") 
                                 img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                                 |#{_author.username}
                     .ui.dividing.header 
@@ -63,26 +63,26 @@ template(name='rental_view')
                         .ui.label #{username}
                     .ui.hidden.divider
                 .six.wide.column
-                    // a.ui.header(href="/user/#{target.username}")
+                    // a.ui.header(href="/u/#{target.username}")
                     //     |#{target.username}
                     .scrolling
-                        +textarea_view key='description' label='description' direct=true
+                        +textarea_view k='description' l='description' d=true
                     div 
-                    +array_view key='tags' label='tags' direct=true
+                    +array_view k='tags' l='tags' d=true
                     .spacer
                     .spacer
                     +comments
                     // +voting_full
-                    //- +array_view key='location_tags' label='location_tags' direct=true
+                    //- +array_view k='location_tags' l='location_tags' d=true
                 .five.wide.column
                     .ui.inline.header 
                         // i.cart.icon
-                        +icolor name='buy'
+                        +icolor n='buy'
                         |reserve
                     div
                     .ui.big.circular.green.fluid.button.reserve_for_usd
                         // |buy for 
-                        // +icolor name='money' cl='ui inline image'
+                        // +icolor n='money' cl='ui inline image'
                         |$#{usd_price}
                     if currentUser
                         .ui.horizontal.divider or
@@ -97,7 +97,7 @@ template(name='rental_view')
                                 // |buy for 
                                 |#{point_price}pts
                     .ui.dividing.header 
-                        +icolor name='activity-history' cl='ui inline image'
+                        +icolor n='activity-history' cl='ui inline image'
                         |#{rental_reservations.length} reservations
                     .ui.large.link.selection.list
                         each reservations
@@ -110,7 +110,7 @@ template(name='rental_view')
                                             .ui.inline.header #{point_amount}pts
                                         |#{when} #{_author_username}
                                     if can_edit 
-                                        +icolor name='return-purchase' cl='ui mini inline image return pointer'
+                                        +icolor n='return-purchase' cl='ui mini inline image return pointer'
                                     if is_admin
                                         +remove_button
 
@@ -125,7 +125,7 @@ template(name='rental_edit')
                     a.ui.circular.icon.green.big.button(href="/rental/#{_id}/view" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
-                        +icolor name='tear-off-calendar'
+                        +icolor n='tear-off-calendar'
                         |edit rental
                     .ui.red.circular.icon.button.delete_item(title='delete')
                         i.large.remove.icon
@@ -134,22 +134,22 @@ template(name='rental_edit')
                     .ui.header 
                         small author
                         |#{_author.username}
-                        +boolean_edit key='published' label='published' direct=true
+                        +boolean_edit k='published' l='published' d=true
                 .column
-                    +text_edit key='title' label='title' direct=true
+                    +text_edit k='title' l='title' d=true
                     .ui.header
-                        +icon name='audience'
+                        +icon n='audience'
                         |audience
-                    +number_edit key='max_capacity' label='max capacity' min='0' max='300' direct=true
-                    +number_edit key='points_per_hour' label='points per hour' min='0' max='1000' direct=true
-                    +number_edit key='dollars_per_hour' label='dollars per hours' min='0' max='1000' direct=true
+                    +number_edit k='max_capacity' l='max capacity' min='0' max='300' d=true
+                    +number_edit k='points_per_hour' l='points per hour' min='0' max='1000' d=true
+                    +number_edit k='dollars_per_hour' l='dollars per hours' min='0' max='1000' d=true
                 .column
-                    +textarea_edit key='description' label='description' direct=true
-                    +image_edit key='image_id' label='image' direct=true
+                    +textarea_edit k='description' l='description' d=true
+                    +image_edit k='image_id' l='image' d=true
                     div 
-                    +array_edit key='tags' label='tags' direct=true
-                    +text_edit key='location' label='location' direct=true
-                    +array_edit key='location_tags' label='location_tags' direct=true
+                    +array_edit k='tags' l='tags' d=true
+                    +text_edit k='location' l='location' d=true
+                    +array_edit k='location_tags' l='location_tags' d=true
                     // unless published
                     //     a.ui.fluid.green.button.submit(href="/save")
                     //         i.checkmark.icon
