--- a/parts/message.jade
+++ b/parts/message.jade
@@ -10,14 +10,14 @@ template(name='message_view')
         .ui.stackable.padded.grid
             .centered.row 
                 .five.wide.column
-                    a(href="/user/#{_author.username}") 
+                    a(href="/u/#{_author.username}") 
                         .ui.header 
                             i.chevron.up.icon
                             |sender
                         img.ui.rounded.small.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
                         .ui.header 
                             |#{_author.name}
-                    a(href="/user/#{recipient.username}")
+                    a(href="/u/#{recipient.username}")
                         .ui.header
                             i.chevron.down.icon
                             |recipient
@@ -35,7 +35,7 @@ template(name='message_view')
                         | #{when}
                     .f12
                         |#{description}
-                    +image_view key='image_id' label='image' direct=true
+                    +image_view k='image_id' l='image' d=true
                     div 
                     if tags
                         i.tags.icon
@@ -45,7 +45,7 @@ template(name='message_view')
                     .spacer
                     +comments
                     +voting_full
-                    +array_view key='location_tags' label='location_tags' direct=true
+                    +array_view k='location_tags' l='location_tags' d=true
 
 
 
